bug fix- login button not working in laptop due to homegif overlap

--- a/client/src/components/body/Home/home.css
+++ b/client/src/components/body/Home/home.css
@@ -70,7 +70,7 @@
 
 .home-band > img {
   position: absolute;
-  width: 40vw;
+  width: 27vw;
 }
 
 .mid-home {
