--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* #page-wrap {
+  overflow-x: hidden;
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
